2016-03-23 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.h
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m
	* Modules/Debuggers/ProjectCenter/PipeDelegate.h
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m
	* Modules/Debuggers/ProjectCenter/PCDebuggerViewDelegateProtocol.h
	Merge in from pipes branch: stdio/stdout over pipes handled in a separate delegate class.

2016-03-23 Riccardo Mottola <rm@gnu.org>

	* Framework/PCBundleManager.m
	* Framework/PCProjectLauncher.m
	Merge from branch: check bundle loading and warn.

2016-03-15 18:47-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PTYView.h
	* Modules/Debuggers/ProjectCenter/PTYView.m:
	Undo previous change.  Move Riccardo's change to
	branch ptyview_with_pipes.

2016-03-14 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PTYView.h
	* Modules/Debuggers/ProjectCenter/PTYView.m
	Use stdio/stdout over pipes instead of a tty

2016-03-08 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectLauncher.m
	Update debug executable path search to run, make it work on windows.

2015-11-09 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectInspector.m
	Allocate a Mutable Array before assagning an Array to a MutableArray

2015-11-05 Riccardo Mottola <rm@gnu.org>

	* Modules/Projects/Application/PCAppProject+Inspector.h
	* Modules/Projects/Application/PCAppProject+Inspector.m
	* Headers/ProjectCenter/PCDefines.h
	* Modules/Projects/Application/PCAppProject.h
	* Modules/Projects/Application/PCAppProject.m
	* Modules/Projects/Application/Resources/Inspector.gorm
	CFBundleIdentifier support for Apps.

2015-11-02 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditorView.m
	Cleanups and NSInteger conversion.

	* Modules/Editors/ProjectCenter/LineJumper.h
	* Modules/Editors/ProjectCenter/LineJumper.m
	declare missing method

2015-06-16 Riccardo Mottola <rm@gnu.org>
